--- a/index.html
+++ b/index.html
@@ -18,10 +18,18 @@
         <p>Estaremos chegando em breve! Estamos<br> trabalhando muito para oferecer a<br> você melhor experiência!</p><br><br>
         <input type="email" name="email" placeholder="Enter a valid email address"><button>Me avise</button>
     </div>
+    <p class="paragrafo">IMAGENS DE FREEPIK</p>
+    <div class="icones">
+        <img src="/img/icones/104498_facebook_icon.png">
+        <img src="/img/icones/8598119_twiter_chat_message_comment_icon.png">
+        <img src="/img/icones/1161953_instagram_icon (1).png">
+        <img src="/img/icones/367593_linkedin_business_network_social_icon.png">
+        <img src="/img/icones/104469_pinterest_icon.png">
+    </div>
   <footer class="rodape">
     <p>Sample text. Click to select the text box. Click again or double<br> click to start editing the text.</p>
     <div class="link">
-        <a href="#">Website Templates</a>criado com<a href="#">Website Builder Software</a>
+        <a href="#">Website Templates</a><span>Desenvolvido por</span><a href="#">Raul Domingues</a>
     </div>
   </footer>
 </body>
