--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     </div>
     <div class="conteudo">
         <h1>Estaremos chegando em breve!</h1><br>
-        <p>Estaremos chegando em breve! Estamos<br> trabalhando muito para oferecer a<br> você melhor experiência!</p><br><br>
-        <input type="email" name="email" placeholder="Enter a valid email address"><button>Me avise</button>
+        <p><i>Estaremos chegando em breve! Estamos<br> trabalhando muito para oferecer a<br> você melhor experiência!</i></p><br><br>
+        <div class="input">
+            <input type="email" name="email" placeholder="Enter a valid email address"><button>Me avise</button>
+        </div>
     </div>
     <p class="paragrafo">IMAGENS DE FREEPIK</p>
     <div class="icones">
